# open-validation-schemas

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  STYLEGUIDE.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_schema_proposal.md
.github/workflows/: ci.yml
examples/negative/: audio-transcription-invalid-segment.json  audio-transcription-missing-content.json  classification-bad-timestamp-length.json  classification-invalid-structure.json  document-extraction-bad-multipolygon-norm.json  document-extraction-unknown-block.json  embedding-nested-attributes.json  embedding-sparse-bad-types.json  entity-extraction-missing-label.json  entity-extraction-score-out-of-range.json  geolocation-unbounded-foreign-member.json  llm-output-extra-fields.json  object-detection-nested-attributes.json  regression-missing-value.json  regression-nested-attributes.json
examples/positive/: audio-transcription-1.json  document-extraction-1.json  document-extraction-2.json  embedding-2.json  embedding-dense.json  entity-extraction-1.json  llm-output-1.json  object-detection-1.json  regression-1.json
reference/examples/negative/: audio-transcription-bad-language-code.json  audio-transcription-negative-duration.json  classification-bad-attributes.json  (+16 more)
schemas/: audio-transcription.json  classification.json  document-extraction.json  embedding.json  entity-extraction.json  generic.json  geolocation.json  llm-output.json  object-detection.json  regression.json
tests/: test_backward_compatability.py  test_examples.py  test_schemas.py
(+8 files in other folders)
