[project]
name = "open-validation-schemas"
version = "0.5.0"
description = "DorsalHub Open Validation Schemas CI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "jsonschema-rs>=0.38", "hypothesis-jsonschema>=0.23.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
